# trip_packer

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  refactor_backend.md  tasks.md
.codellm/rules/: running_shell_commands.mdc
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  compose.yml  pyproject.toml
backend/migrations/versions/: 115be744145d_add_quantity_and_status_to_trip_items_.py  22b3d82c6c6a_refactor_models_add_bags_trip_bags_and_packings_tables.py  72e4c3d18a0f_initial_migration_with_trip_items_and_.py  8c8a963e4527_create_tables.py  bee86553ca1a_setting_entities_name_to_be_unique.py
backend/tests/: conftest.py  test_app.py  test_bags.py  test_database.py  test_items.py  test_luggage.py  test_packing.py  test_trip_items.py  test_trips.py
backend/trip_packer/: app.py  database.py  models.py  schemas.py  settings.py
backend/trip_packer/routers/: bag.py  items.py  luggage.py  packing.py  trip_items.py  trips.py
frontend/: .env.docker  .eslintrc.json  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.js  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.js  main.ts
frontend/src/: App.js  App.tsx  index.css  types.ts
migrations/: env.py
scripts/: README_SCRIPT.md  create_tasks.py  tasks.md
tests/: conftest.py  test_app.py  test_database.py  test_items.py  test_luggage.py  test_packing.py  test_trips.py
trip_packer/: app.py  database.py  models.py  schemas.py  settings.py
(+48 files in other folders)
